# phosbot

./: .gitignore  CMakeLists.txt  README  README.md  bouncer.py  hue_server.py  porter.py  requirements.txt  walter.py
cxx/: AudioLightifier.cpp  AudioLightifier.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  audio_main.cpp
cxx/audio/: ALSubsystem.cpp  ALSubsystem.h  ALdllmain.cpp  ALdllmain.h  AudioLoader.h  AudioStream.h  BufferedSound.cpp  BufferedSound.h  Exception.h  OggLoader.cpp  OggLoader.h  OggStream.cpp  OggStream.h  SharedPtr.h  Sound.cpp  Sound.h  SoundData.h  StreamedSound.cpp  StreamedSound.h  Vector3.cpp  Vector3.h  WavLoader.cpp  WavLoader.h  WavStream.cpp  WavStream.h
speech/: commandparser.py
