FIND_PACKAGE(Boost)
FIND_PACKAGE(OpenAL)
FIND_PACKAGE(SDL REQUIRED)
FIND_LIBRARY(COCOA_LIBRARY Cocoa)
IF(Boost_FOUND)
  if (APPLE)
    #set (PYTHON_INC "/usr/local/Cellar/python/2.7.4/Frameworks/Python.framework/Headers")
    #set (PYTHON_LIB "/usr/local/Cellar/python/2.7.4/Frameworks/Python.framework/Versions/Current/lib/libpython2.7.dylib")
    set (PYTHON_INC "/System/Library/Frameworks/Python.framework/Headers")
    set (PYTHON_LIB "/System/Library/Frameworks/Python.framework/Versions/2.7/Python")
  else()
    set (PYTHON_INC "/usr/include/python2.7")
    set (PYTHON_LIB "python")
  endif()
  INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}" ${PYTHON_INC} ${OpenAL_INCLUDE_DIRS})
  SET(Boost_USE_STATIC_LIBS OFF)
  SET(Boost_USE_MULTITHREADED ON)
  SET(Boost_USE_STATIC_RUNTIME OFF)
  FIND_PACKAGE(Boost COMPONENTS python)
ELSEIF(NOT Boost_FOUND)
  MESSAGE(FATAL_ERROR "Unable to find correct Boost version. Did you set BOOST_ROOT?")
ENDIF()
ADD_SUBDIRECTORY(cxx)
